# expense-tracker-cli

./: Cargo.toml  README.md  expense.json  temp.txt
src/: main.rs
tests/: cli.rs
